# ze_oss

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
aligned_allocator/: package.xml
aligned_allocator/src/: aligned_allocator_benchmark.cpp
cmake/: ze_cmake-extras.cmake.develspace.in  ze_cmake-extras.cmake.installspace.in
cmd/: CMakeLists.txt  cu_min_max_test.cpp  cu_rof_denoising_test.cpp  cu_tvl1_denoising_test.cpp  image_filter_gauss_test.cpp  image_filter_median3x3_test.cpp  image_pyramid_test.cpp  natural_edges_test.cpp  package.xml
common/ze_splines/: CMakeLists.txt  package.xml
common/ze_splines/include/ze/splines/: bspline.hpp  operators.hpp  viz_splines.hpp
common/ze_splines/src/: viz_splines.cpp
common/ze_splines/test/: test_bspline.cpp  test_bspline_pose_minimal.cpp
cuda_toolkit/: CMakeLists.txt  package.xml
cuda_toolkit/cmake/: imp_3rdparty_cuda_toolkit-extras.cmake.in
doc/: line_parametrization.tex  preintegration.tex
examples/: trajectory_alignment.py
imp/imp_bridge_pangolin/: CMakeLists.txt
imp/imp_bridge_pangolin/include/imp/bridge/pangolin/: pangolin_display.hpp
imp/imp_cu_core/: CMakeLists.txt  package.xml
imp/imp_cu_core/include/imp/cu_core/: cu_image_gpu.cuh  cu_image_reduction.cuh  cu_linearmemory.cuh  cu_texture.cuh
imp/imp_cu_core/src/: cu_image_gpu.cu  cu_image_reduction.cu  cu_linearmemory.cu
imp/imp_cu_core/test/: cu_linearmemory_test.cpp  sum_test.cpp  test_main.cpp  test_weighted_sum.cpp
imp/imp_cu_correspondence/: package.xml
imp/imp_cu_correspondence/include/imp/cu_correspondence/: solver_stereo_huber_l1.cuh  stereo_ctf_warping.hpp
imp/imp_cu_correspondence/src/: occlusion_kernel.cuh  solver_epipolar_stereo_precond_huber_l1.cu  solver_stereo_precond_huber_l1.cu  variational_stereo.cpp
imp/ros/rof_denoising/: CMakeLists.txt
imp_benchmark_aligned_allocator/: CMakeLists.txt
imp_benchmark_aligned_allocator/src/: aligned_allocator_benchmark.cpp
imp_bridge_af/: CMakeLists.txt  package.xml
imp_bridge_opencv/: CMakeLists.txt
imp_bridge_pangolin/: package.xml
imp_bridge_ros/: package.xml
imp_cu_imgproc/: CMakeLists.txt  package.xml
imp_tools_cmd/: cu_min_max_test.cpp  cu_rof_denoising_test.cpp  cu_tvl1_denoising_test.cpp  image_filter_gauss_test.cpp  image_filter_median3x3_test.cpp  natural_edges_test.cpp  package.xml
pangolin_example/: CMakeLists.txt  package.xml
pangolin_example/src/: pangolin_load_test.cpp
rof_denoising/: CMakeLists.txt  package.xml
rof_denoising/src/: rof_node.cpp
src/: accelerometer_model.cpp  add_weighted.cu  align_points.cpp  align_poses.cpp  bag_image_fetcher.cpp  bspline.cpp  bspline_pose_minimal.cpp  camera.cpp  camera_impl.cpp  camera_imu_synchronizer.cpp  camera_imu_synchronizer_base.cpp  camera_imu_synchronizer_unsync.cpp  camera_rig.cpp  camera_simulator.cpp  camera_utils.cpp  camera_yaml_serialization.cpp  clam.cpp  csv_trajectory.cpp  cu_bilateral_filter.cu  cu_gauss_filter.cu  cu_horizontal_stereo_pair_rectifier.cu  cu_image_gpu.cu  cu_image_reduction.cu  cu_linearmemory.cu  cu_median3x3_filter.cu  cu_natural_edges.cu  cu_pixel_conversion.cpp  cu_reduce.cu  cu_resample.cu  cu_rof_denoising.cu  cu_stereo_rectification.cu  cu_tvl1_denoising.cu  cu_undistortion.cu  cu_variational_denoising.cu  cv_connector_pixel_types.cpp  data_provider_base.cpp  data_provider_csv.cpp  data_provider_factory.cpp  data_provider_rosbag.cpp  data_provider_rostopic.cpp  (+89 more)
test/: bridge_feature_detection.cpp  cu_linearmemory_test.cpp  debug_main.cpp  image_gpu_simple_test.cpp  imp_bridge_af_test.cpp  linearmemory_test.cpp  main.cpp  main_node.cpp  min_max_test.cpp  reduction_test.cpp  roi_test.cpp  single_shot_timer_test.cpp  size_test.cpp  sum_test.cpp  test-transformation.cpp  test_accelerometer_model.cpp  test_add_weighted.cpp  test_align_points.cpp  test_align_poses.cpp  test_benchmark.cpp  test_bspline.cpp  test_bspline_pose_minimal.cpp  test_buffer.cpp  test_camera_impl.cpp  test_camera_imu_synchronizer.cpp  test_camera_imu_synchronizer_unsync.cpp  test_camera_rig.cpp  test_camera_simulator.cpp  test_camera_utils.cpp  test_clam.cpp  test_combinatorics.cpp  test_copy.cpp  test_cu_image_pyramid.cpp  test_cu_rof.cpp  test_cu_stereo_rectifier.cpp  test_cu_str_tex_decomp.cpp  test_cu_undistortion.cpp  test_data_provider.cpp  (+55 more)
variational_stereo/: CMakeLists.txt  package.xml  variational_epipolar_stereo_test.cpp  variational_stereo_test.cpp
ze_common/: .gitignore  package.xml
ze_common/include/ze/common/: combinatorics.hpp  manifold.hpp  matrix.hpp  nonassignable.hpp  numerical_derivative.hpp  random_matrix.hpp  ringbuffer-inl.hpp  ringbuffer.hpp  running_statistics.hpp  signal_handler.hpp  stl_utils.hpp  string_utils.hpp  test_entrypoint.hpp  thread_pool.hpp  thread_safe_fifo.hpp  timer.hpp  timer_statistics.hpp  transformation.hpp  types.hpp  versioned_slot_handle.hpp  yaml_serialization.hpp
ze_common/src/: random.cpp  signal_handler.cpp
ze_common/test/: test_benchmark.cpp  test_combinatorics.cpp  test_random.cpp  test_random_matrix.cpp  test_ringbuffer.cpp  test_running_statistics.cpp  test_stl_utils.cpp  test_thread_safe_fifo.cpp  test_timer.cpp
ze_pangolin/: CMakeLists.txt  package.xml
ze_pangolin/include/ze/pangolin/: pangolin.hpp  pangolin_insight.hpp  type_watches.hpp
ze_pangolin/src/: pangolin.cpp  pangolin_test_node.cpp
ze_pangolin/test/: test_type_watches.cpp
ze_vi_simulation/: CMakeLists.txt
ze_vi_simulation/include/ze/vi_simulation/: camera_simulator.hpp  camera_simulator_types.hpp  evaluation_tools.hpp  imu_bias_simulator.hpp  imu_simulator.hpp  trajectory_simulator.hpp  vi_simulator.hpp
ze_vi_simulation/src/: camera_simulator.cpp  imu_bias_simulator.cpp  vi_simulator.cpp
ze_vi_simulation/test/: test_camera_simulator.cpp  test_imu_bias_simulator.cpp  test_imu_simulator.cpp  test_trajectory_simulator.cpp  test_vi_simulator.cpp
ze_visualization/: package.xml
ze_visualization/include/ze/visualization/: viz_common.hpp  viz_interface.hpp  viz_ros.hpp  viz_ros_utils.hpp
ze_visualization/src/: viz_common.cpp  viz_example_node.cpp  viz_ros.cpp
(+634 files in other folders)
