<?xml version="1.0"?>
<package format="2">
  <name>ze_imu_evaluation</name>
  <version>0.0.1</version>
  <description>
    Tools to evaluate imu models.
  </description>

  <maintainer email="luc.oth@WyssZurich.ch">Luc Oth</maintainer>
  <license>ZE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>ze_splines</depend>
  <depend>minkindr</depend>

  <export></export>
</package>
