<?xml version="1.0"?>
<package format="2">
  <name>imp_tools_cmd</name>
  <description>
    IMP command line tools for calling specific algorithms mainly for testing purpose.
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>ze_cmake</depend>
  <depend>imp_core</depend>
  <depend>imp_cu_core</depend>
  <depend>imp_cu_imgproc</depend>
  <depend>imp_bridge_opencv</depend>
  <depend>imp_bridge_pangolin</depend>

  <test_depend>gtest</test_depend>
</package>
