<?xml version="1.0"?>
<package format="2">
  <name>ze_pangolin</name>
  <version>0.0.1</version>
  <description>
    ze_pangolin
  </description>
  <maintainer email="luc.oth@zurich-eye.com">Luc Oth</maintainer>
  <license>ZE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>pangolin_catkin</depend>

  <test_depend>gtest</test_depend>
</package>
