<?xml version="1.0"?>
<package format="2">
  <name>ze_visualization</name>
  <version>0.1.4</version>
  <description>The ze_visualization package</description>

  <maintainer email="christian.forster@WyssZurich.ch">Christian Forster</maintainer>
  <license>ZE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>imp_bridge_opencv</depend>
  <depend>minkindr</depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>ze_ros</depend>
  
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>
  
  <test_depend>gtest</test_depend>
</package>
