<?xml version="1.0"?>
<package format="2">
  <name>imp_cu_core</name>
  <description>
    IMP core module for GPGPU processing (CUDA)
  </description>
  <version>0.1.4</version>
  <license>ZE</license>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>

  <depend>ze_cmake</depend>
  <depend>imp_core</depend>

  <test_depend>gtest</test_depend>
</package>
