<?xml version="1.0"?>
<package format="2">
  <name>imp_cu_correspondence</name>
  <description>
    IMP CUDA depth estimation / range image module
  </description>
  <version>0.1.4</version>
  <license>ZE</license>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>ze_cmake</depend>
  <depend>ze_common</depend>
  <depend>ze_cameras</depend>
  <depend>ze_geometry</depend>
  <depend>imp_core</depend>
  <depend>imp_cu_core</depend>
  <depend>imp_3rdparty_cuda_toolkit</depend>
  <depend>imp_cu_imgproc</depend>

  <test_depend>gtest</test_depend>
</package>
